--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -145,5 +145,5 @@ updates:
     desc: "The dataset Drug Shortages is now available."
   - title: "Complete Response Letters released"
     path: /apis/transparency/completeresponseletters/
-    date: 2025-07-11
-    desc: "Complete Response Letters (CRL) issued in response to new drug applications (NDAs) and biologics license applications (BLAs) between 2020 and 2024 have been released."
+    date: 2025-09-05
+    desc: "Complete Response Letters (CRL) issued in response to new drug applications (NDAs) and biologics license applications (BLAs) have been released. Currently, the database includes CRLs issued to sponsors as recently as 2025."
