--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -432,6 +432,24 @@
           link: /apis/other/nsde/download/
         - title: Searchable fields
           link: /apis/other/nsde/searchable-fields/
+    - title: PubMed
+      id: other-pubmed
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/other/pubmed/
+        - title: How to use the API
+          link: /apis/other/pubmed/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/other/pubmed/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/other/pubmed/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/other/pubmed/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/other/pubmed/download/
+        - title: Searchable fields
+          link: /apis/other/pubmed/searchable-fields/
     - title: Substance Data Reports
       id: other-substance
       collapse: true
