--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -147,3 +147,7 @@ updates:
     path: /apis/transparency/completeresponseletters/
     date: 2025-09-05
     desc: "Complete Response Letters (CRL) issued in response to new drug applications (NDAs) and biologics license applications (BLAs) have been released. Currently, the database includes CRLs issued to sponsors as recently as 2025."
+  - title: "New openFDA Dataset - Cosmetic Adverse Events"
+    path: /apis/cosmetic/event/
+    date: 2025-09-13
+    desc: "The dataset Cosmetic Adverse Events is now available."
