Added AlphaSPIKE to the community page

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -10,3 +10,5 @@
   url: 'https://www.riskbased.ai/maude'
 - title: 'Vespper'
   url: 'https://www.vespper.com'
+- title: 'AlphaSPIKE'
+  url: 'https://fdarisk.com/'
