--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -10,5 +10,5 @@
   url: 'https://www.riskbased.ai/maude'
 - title: 'Vespper'
   url: 'https://www.vespper.com'
-- title: 'AlphaSPIKE'
+- title: "AlphaSPIKE- God's Eye"
   url: 'https://fdarisk.com/'
