--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -490,6 +490,31 @@
           link: /apis/other/unii/download/
         - title: Searchable fields
           link: /apis/other/unii/searchable-fields/
+
+- title: Publications API Endpoints
+  id: publications-api-endpoints
+  link: /publications/
+  collapse: true
+  items:
+    - title: Peer Reviewed Journals
+      id: publications-peerreviewed
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/publications/peerreviewed/
+        - title: How to use the API
+          link: /apis/publications/peerreviewed/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/publications/peerreviewed/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/publications/peerreviewed/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/publications/peerreviewed/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/publications/peerreviewed/download/
+        - title: Searchable fields
+          link: /apis/publications/peerreviewed/searchable-fields/
+
 - title: Tobacco API Endpoints
   id: tobacco-api-endpoints
   link: /tobacco/
