Add IndexRoute component for Publications and fix typo in infographics

--- a/src/pages/apis/publications/peerreviewed/_infographics.yaml
+++ b/src/pages/apis/publications/peerreviewed/_infographics.yaml
@@ -5,7 +5,7 @@
     - "Distribution of keywords in the peer reviewed journals by journal type"
   countParam: "keywords.exact"
   filters:
-    - title: "Reviewss"
+    - title: "Reviews"
       searchParam: 'journal_type:Review'
     - title: "Editorials"
       searchParam: 'journal_type:Editorial'
