Update _meta.yaml to reflect changes for the Publications API

--- a/src/pages/apis/publications/_meta.yaml
+++ b/src/pages/apis/publications/_meta.yaml
@@ -1,6 +1,6 @@
-documentTitle: openFDA › Transparency
+documentTitle: openFDA › Publications
 label: API categories
-title: Transparency
-description: "Data which provides transparency regarding FDA operations."
-path: /apis/transparency
+title: Publications
+description: "The Publications API provides access to various FDA-authored works and research publications."
+path: /apis/publications
 type: noun
