--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -151,3 +151,7 @@ updates:
     path: /apis/cosmetic/event/
     date: 2025-09-13
     desc: "The dataset Cosmetic Adverse Events is now available."
+  - title: "New openFDA Dataset - Orange Book"
+    path: /apis/drug/orangebook/
+    date: 2025-12-04
+    desc: "The dataset Orange Book is now available."
