--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -144,6 +144,24 @@
           link: /apis/drug/enforcement/download/
         - title: Searchable fields
           link: /apis/drug/enforcement/searchable-fields/
+    - title: Orange Book
+      id: drug-orange-book
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/drug/orangebook/
+        - title: How to use the API
+          link: /apis/drug/orangebook/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/drug/orangebook/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/drug/orangebook/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/drug/orangebook/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/drug/orangebook/download/
+        - title: Searchable fields
+          link: /apis/drug/orangebook/searchable-fields/
     - title: Drugs@FDA
       id: drug-drugs-fda
       collapse: true
