--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -1,14 +1,12 @@
 - title: 'Recalls.Me'
   url: 'https://recalls.me'
-- title: 'Product Recall Tracker'
-  url: 'https://recall.report/'
 - title: 'Orca1 Active Medical Device Surveillance'
   url: 'https://orca1.ai'
-- title: 'MEDPilot'
-  url: 'https://medpilot.stpi.narl.org.tw/info'
 - title: 'MAUDE 3.0'
   url: 'https://www.riskbased.ai/maude'
 - title: 'Vespper'
   url: 'https://www.vespper.com'
 - title: "AlphaSPIKE- God's Eye"
   url: 'https://fdarisk.com/'
+- title: "Innolitics 510k Browser"
+  url: 'https://510k.innolitics.com/'
