--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -10,3 +10,7 @@
   url: 'https://fdarisk.com/'
 - title: "Innolitics 510k Browser"
   url: 'https://510k.innolitics.com/'
+-title: "Beudamed"
+  url: 'https://beudamed.com/'
+-title: "Rhizome AI"
+  url: 'https://rhizomeai.com/'
