Added a new community app

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -10,6 +10,8 @@
   url: 'https://fdarisk.com/'
 - title: "Innolitics 510k Browser"
   url: 'https://510k.innolitics.com/'
+- title: "Innolitics MAUDE Browser"
+  url: 'https://maude.innolitics.com/'
 - title: "Beudamed"
   url: 'https://beudamed.com/'
 - title: "Rhizome AI"
