--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "Violet Wren, Priyanka Ayer",
   "scripts": {
     "dev": "gatsby develop -H 0.0.0.0 -p 3000",
-    "serve": "gatsby serve -H 0.0.0.0 -p 3000",
-    "build": "gatsby build --verbose",
+    "serve": "gatsby serve --prefix-paths -H 0.0.0.0 -p 3000",
+    "build": "gatsby build --prefix-paths --verbose",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.{js,ts,tsx}'",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop --prefix-paths",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "test:e2e": "start-server-and-test dev http-get://127.0.0.1:3000 cy:open",
