Added OncoGuide to Community Apps

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -16,3 +16,5 @@
   url: 'https://beudamed.com/'
 - title: "Rhizome AI"
   url: 'https://rhizomeai.com/'
+- title: "OncoGuide"
+  url: 'https://oncoguide.us/'
