Added Tesseran to Community Apps

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -18,3 +18,5 @@
   url: 'https://rhizomeai.com/'
 - title: "OncoGuide"
   url: 'https://oncoguide.us/'
+- title: "Tesseran"
+  url: 'https://tesseran.io'
