Updated research paper name cited for tobacco prevention ads

--- a/src/pages/apis/tobacco/researchpreventionads/_meta.yaml
+++ b/src/pages/apis/tobacco/researchpreventionads/_meta.yaml
@@ -1,6 +1,6 @@
 documentTitle: openFDA › Tobacco › Prevention Ads Research API
 name: Tobacco Prevention Ads Research
-description: "This dataset makes available the Research Manuscript: Impact Potential of FDA's Tobacco Prevention Ads on Youth Attitudes and Beliefs: Meta-Analytical Evidence from A Decade's Worth of Copy Testing"
+description: "This dataset makes available the Research Manuscript: Effectiveness of Youth Tobacco Prevention Ads: Meta-Analysis of a Decade's Worth of Copy Testing Data."
 datasets:
   - tobaccoresearchpreventionads
 label: Tobacco Prevention Ads Research
